Tmux: Spawn new pane in same directory

--- a/private_dot_config/tmux/tmux.conf
+++ b/private_dot_config/tmux/tmux.conf
@@ -67,8 +67,8 @@ bind -n M-z send-prefix # Prefix key for client Tmux is Alt+z
 # After pressing prefix key, you can continue with keybindings below to do stuffs
 bind M-r source-file $HOME/.tmux.conf \; display 'Tmux Reloaded' # Alt+r to reload configuration
 bind f choose-tree                                               # f to find session, window, or pane from a list
-bind M-s split-window -h                                         # Alt+s to make new split window
-bind M-v split-window -v                                         # Alt+v to make new vertical split window
+bind M-s split-window -h -c "#{pane_current_path}"                                         # Alt+s to make new split window
+bind M-v split-window -v -c "#{pane_current_path}"                                        # Alt+v to make new vertical split window
 bind r command-prompt -I'#W' "rename-window -- '%%'"             # r to rename current window
 bind R command-prompt -I'#S' "rename-session -- '%%'"            # R to rename current session
 
