Tmux: Resize panes with arrow-keys instead of hjkl

--- a/private_dot_config/tmux/tmux.conf
+++ b/private_dot_config/tmux/tmux.conf
@@ -84,10 +84,10 @@ bind -r > swap-pane -D   # > to swap to the next pane
 bind -r < swap-pane -U   # < to swap to the previous pane
 
 # Resizing panes
-bind -r H resize-pane -L 2 # H to resize to the left
-bind -r J resize-pane -D 2 # J to resize downwards
-bind -r K resize-pane -U 2 # K to resize upwards
-bind -r L resize-pane -R 2 # L to resize to the right
+bind -r Left resize-pane -L 2 # H to resize to the left
+bind -r Down resize-pane -D 2 # J to resize downwards
+bind -r Up resize-pane -U 2 # K to resize upwards
+bind -r Right resize-pane -R 2 # L to resize to the right
 
 # Moving between windows
 bind -r M-n next-window                     # Alt+n to move next window
