Disabled mouse support, to allow copy & paste between remote sessions again.

--- a/private_dot_config/tmux/tmux.conf
+++ b/private_dot_config/tmux/tmux.conf
@@ -14,7 +14,7 @@ setw -g automatic-rename on                                                     
 setw -g automatic-rename-format '#{pane_current_command}'                                                 # Format of automatic window renaming
 setw -g allow-rename off                                                                                  # Allow programs to change the window name
 setw -g xterm-keys on                                                                                     # Xterm style function key sequences
-set -g mouse on                                                                                           # Enable mouse support
+set -g mouse off                                                                                          # Enable mouse support
 set -g status-keys vi                                                                                     # Use vi style keybindings in command prompt
 setw -g mode-keys vi                                                                                      # Use vi style keybindings in copy mode
 set -g base-index 1                                                                                       # Starting index for new window
