Tmux: Use alt+arrow keys to navigate between panes. Nvim: Enable blinking cursor mode.

--- a/private_dot_config/tmux/tmux.conf
+++ b/private_dot_config/tmux/tmux.conf
@@ -65,7 +65,7 @@ set -g prefix M-a       # Prefix key is now Alt+a
 bind -n M-z send-prefix # Prefix key for client Tmux is Alt+z
 
 # After pressing prefix key, you can continue with keybindings below to do stuffs
-bind M-r source-file $HOME/.tmux.conf \; display 'Tmux Reloaded' # Alt+r to reload configuration
+bind M-r source-file $HOME/.config/tmux/tmux.conf \; display 'Tmux Reloaded' # Alt+r to reload configuration
 bind f choose-tree                                               # f to find session, window, or pane from a list
 bind M-s split-window -h -c "#{pane_current_path}"                                         # Alt+s to make new split window
 bind M-v split-window -v -c "#{pane_current_path}"                                        # Alt+v to make new vertical split window
@@ -73,21 +73,21 @@ bind r command-prompt -I'#W' "rename-window -- '%%'"             # r to rename c
 bind R command-prompt -I'#S' "rename-session -- '%%'"            # R to rename current session
 
 # Alt+e to edit tmux.conf.local file
-bind M-e new-window "sh -c '\${EDITOR:-vim} ~/.tmux.conf.local && tmux source ~/.tmux.conf && tmux display \"Tmux Reloaded\"'"
+bind M-e new-window "sh -c '\${EDITOR:-vim} ~/.config/tmux/tmux.conf && tmux source ~/.config/tmux/tmux.conf && tmux display \"Tmux Reloaded\"'"
 
 # Moving between panes
-bind -r h select-pane -L # h to move left
-bind -r j select-pane -D # j to move down
-bind -r k select-pane -U # k to move up
-bind -r l select-pane -R # l to move right
+bind -n M-Left select-pane -L   # Alt+Left to move left
+bind -n M-Right select-pane -R  # Alt+Right to move right 
+bind -n M-Up select-pane -U     # Alt+Up to move up
+bind -n M-Down select-pane -D   # Alt+Down to move down
 bind -r > swap-pane -D   # > to swap to the next pane
 bind -r < swap-pane -U   # < to swap to the previous pane
 
 # Resizing panes
-bind -r Left resize-pane -L 2 # H to resize to the left
-bind -r Down resize-pane -D 2 # J to resize downwards
-bind -r Up resize-pane -U 2 # K to resize upwards
-bind -r Right resize-pane -R 2 # L to resize to the right
+bind -r Left resize-pane -L 1 # H to resize to the left
+bind -r Down resize-pane -D 1 # J to resize downwards
+bind -r Up resize-pane -U 1 # K to resize upwards
+bind -r Right resize-pane -R 1 # L to resize to the right
 
 # Moving between windows
 bind -r M-n next-window                     # Alt+n to move next window
