Tmux: Adding hjkl binds to move bewteen panes again. Nvim: When leaving nvim, the previous cursor-style gets restored.

--- a/private_dot_config/tmux/tmux.conf
+++ b/private_dot_config/tmux/tmux.conf
@@ -76,6 +76,10 @@ bind R command-prompt -I'#S' "rename-session -- '%%'"            # R to rename c
 bind M-e new-window "sh -c '\${EDITOR:-vim} ~/.config/tmux/tmux.conf && tmux source ~/.config/tmux/tmux.conf && tmux display \"Tmux Reloaded\"'"
 
 # Moving between panes
+bind -r h select-pane -L # h to move left
+bind -r j select-pane -D # j to move down
+bind -r k select-pane -U # k to move up
+bind -r l select-pane -R # l to move right
 bind -n M-Left select-pane -L   # Alt+Left to move left
 bind -n M-Right select-pane -R  # Alt+Right to move right 
 bind -n M-Up select-pane -U     # Alt+Up to move up
