Nvim: Autoinstall treesitter languages. Tmux: Unbind keys which resize panes even.

--- a/private_dot_config/tmux/tmux.conf
+++ b/private_dot_config/tmux/tmux.conf
@@ -59,6 +59,8 @@ unbind C-Up    # resize-pane -U
 unbind C-Down  # resize-pane -D
 unbind C-Left  # resize-pane -L
 unbind C-Right # resize-pane -R
+unbind M-1     # resize-pane even horizontal
+unbind M-2     # resize-pane even vertical
 
 # Now set our custom key bindings
 set -g prefix M-a       # Prefix key is now Alt+a
